--- a/sandwich-geeks-react/src/styles/style.css
+++ b/sandwich-geeks-react/src/styles/style.css
@@ -55,10 +55,7 @@ ul li{
     padding: 25px;
     text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.137);
 }
-/* ul li a {
-    text-decoration: none;
-    color: black;
-} */
+
 nav ul li a {
     position: relative;
     color: white;
@@ -94,24 +91,6 @@ a:visited {
     color: black;
 }
 
-
-
-/* @keyframes bounceInDown {
-    0% {
-      opacity: 0;
-      transform: translateY(-600px);
-    }
-    60% {
-      opacity: 0.8;
-      transform: translateY(10px);
-    }
-    80% {
-      transform: translateY(-10px);
-    }
-    100% {
-      transform: translateY(0);
-    }
-  } */
   
 .circle1 {
     margin-top: -9vh;
@@ -124,7 +103,7 @@ a:visited {
     border: 0.1px solid rgba(0, 0, 0, 0.298);
     box-shadow: 10px 6px 2px rgb(191, 191, 191);
         transition: all 0.3s ease-in-out;
-        /* animation: bounceInDown 0.8s ease-out forwards; */
+
 }
 
 .circle1:hover {
@@ -143,16 +122,16 @@ a:visited {
     margin-top: 30vh;
     text-shadow: 0px 8px 2px rgba(0, 0, 0, 0.304);
     text-shadow: 
-        0px 8px 2px rgba(0, 0, 0, 0.3), /* Outer shadow for depth */
-        2px 2px 10px rgba(255, 89, 0, 0); /* Inner glow effect */
+        0px 8px 2px rgba(0, 0, 0, 0.3), 
+        2px 2px 10px rgba(255, 89, 0, 0); 
     transition: all 0.3s ease-in-out;
 }
 
 .logo:hover {
-    transform: scale(1.03) translateY(-3px); /* Slightly lifts and enlarges */
+    transform: scale(1.03) translateY(-3px); 
     text-shadow: 
-        0px 12px 6px rgba(0, 0, 0, 0.5), /* Stronger outer shadow */
-        3px 3px 12px rgba(255, 89, 0, 0); /* More intense inner glow */
+        0px 12px 6px rgba(0, 0, 0, 0.5), 
+        3px 3px 12px rgba(255, 89, 0, 0); 
     transition: all 0.3s ease-in-out;
 }
 
@@ -181,24 +160,6 @@ p {
     transform: scale(1.1);
     transition: 0.5s;
 }
-
-/* .login {
-    height: 35px;
-    width: 100px;
-    border: 1px solid #000000;
-    background-color: #ff7023;
-    border-radius: 50px;
-    padding-top: 1px;
-    margin-top: -3vh;
-    margin-left: 32vw;
-    transition: all 0.3s ease-in-out
-}
-.login:hover {
-    
-    background: #ffffff00;
-    color: black;
-    transform: translateY(-5px) scale(1.1);
-} */
 
 
 .circle2 {
@@ -237,8 +198,8 @@ p {
     left: 32%;
     transform: translateX(-50%);
     display: flex;
-    gap: 45px; /* Space between buttons */
-    align-items: flex-end; /* Keeps side buttons lower */
+    gap: 45px; 
+    align-items: flex-end; 
     animation: bounceUp 0.8s ease-out forwards;
 }
 @keyframes bounceUp {
@@ -272,14 +233,14 @@ p {
     background-color: white; 
     color: black;
     margin-bottom: 0vh;
-    padding: 10px 30px; /* Slightly smaller than the center button */
+    padding: 10px 30px;
     font-size: 18px;
     border: 1px solid #ff7023;
     border-radius: 50px;
     cursor: default;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease-in-out;
-    /* transform: translateY(0px); Moves side buttons slightly lower */
+
 }
 .top-products-btn:hover {
     background: #ff7023;
@@ -289,7 +250,7 @@ p {
 .side-btn:hover {
     background: #ff7023;
     color: black;
-    transform: translateY(-3px) scale(1.1); /* Slight zoom-in */
+    transform: translateY(-3px) scale(1.1); 
 }
 
 
@@ -351,17 +312,17 @@ p {
     transition: transform 0.4s ease-in-out, opacity 0.6s ease-in-out;
     
     opacity: 0;
-    transform: translateX(100px); /* Starts off to the right */
+    transform: translateX(100px); 
 }
 
 .sideangle-class.slide-in {
     opacity: 1;
-    transform: translateX(0); /* Slides into position */
+    transform: translateX(0); 
 }
 
 
 .sideangle-class:hover {
-    transform: scale(1.08) rotate(2deg); /* Slight zoom and rotation */
+    transform: scale(1.08) rotate(2deg); 
 }
 
 .rule4 {
@@ -421,8 +382,6 @@ p {
   }
   
   .pa1-img:hover {
-    /* transform: translateY(-10px) scale(1.03);
-    transition: 0.5s; */
     cursor: default;
   }
   
@@ -650,7 +609,6 @@ p {
     border: none;
     background-color: #ff7023;
     display: inline-block;
-    /* margin-left: 0%; */
     margin-bottom: 3vh;
     margin-left: -5vw;
     margin-right: 3vw;
@@ -676,7 +634,7 @@ p {
     margin: 50px auto;
     margin-top: -35vh;
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 2x2 layout */
+    grid-template-columns: repeat(2, 1fr); 
     gap: 40px;
     padding: 60px;
     border-radius: 30px;
@@ -696,7 +654,7 @@ p {
     text-align: center;
     margin: 0 auto;
     border: 1px solid #f2d3c2;
-    /* transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; */
+
     transition: all 0.3s ease-in-out;
 }
 
@@ -704,7 +662,7 @@ p {
     transform: translateY(-4px) scale(1.03);
     box-shadow: 2px 12px 24px rgba(255, 255, 255, 0.324);
     background-color: #ffffff;
-    /* border: 0.5px solid black; */
+
     cursor: default;
 }
 
@@ -725,8 +683,6 @@ p {
 }
 
 .offers-container {
-    /* margin-top: 30vh;
-    margin-left: 7vw; */
     margin-top: -45vh;
     margin-bottom: -40vh;
     display: flex;
@@ -763,9 +719,6 @@ p {
     display: inline-block;
     margin-left: -5vw;
     margin-right: 3vw;
-    /* margin-left: 0%;
-    margin-bottom: 3.5vh;
-    margin-right: 59px; */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
 }
 
@@ -777,8 +730,6 @@ p {
     display: inline-block;
     margin-right: -5vw;
     margin-left: 3vw;
-    /* margin-bottom: 3.5vh; 
-    margin-left: 59px; */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
 }
 .offer-section {
@@ -804,7 +755,6 @@ p {
     padding: 28px 0px;
     border-radius: 20px;
     transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
-    /* backdrop-filter: blur(3px); */
     
 }
 
@@ -879,9 +829,6 @@ p {
     display: inline-block;
     margin-left: 3vw;
     margin-right: 1vw;
-    /* margin-left: 0%;
-    margin-bottom: 3.5vh;
-    margin-right: 59px; */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
 }
 
@@ -893,8 +840,6 @@ p {
     display: inline-block;
     margin-right: 3vw;
     margin-left: 1vw;
-    /* margin-bottom: 3.5vh; 
-    margin-left: 59px; */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.252);
 }
   
@@ -906,7 +851,7 @@ p {
     margin-bottom: 3vh;
     margin-top: 1vh;
     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.168);
-    /* display: flex; */
+
   }
   
   
@@ -918,11 +863,11 @@ p {
     padding: 40px 30px;
     border: 1px solid #ff7023b1;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-    /* transition: all 0.3s ease-in-out; */
+
 
   }
   .feedback-card-new:hover {
-    /* transform: scale(1.02); */
+
     box-shadow: 0 1px 25px rgb(255, 111, 0);
   }
   
@@ -980,7 +925,7 @@ p {
 
 .newsletter-footer {
   background: linear-gradient(280deg, #ea5600, #ff7919, #f75b00);
-  /* background: #ff6d1e; */
+
   max-width: 100%;
   color: rgb(0, 0, 0);
   padding: 60px 40px;
@@ -1016,7 +961,7 @@ p {
   margin-top: -2vh;
   margin-left: 0vw;
   line-height: 2.5vh;
-  /* text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.304); */
+
 }
 
 .subscribe-form {
@@ -1035,8 +980,6 @@ p {
     font-size: 16px;
     font-family: 'Niramit';
     background: rgba(255, 255, 255, 0.141);
-    /* background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px); */
     color: rgb(0, 0, 0);
     transition: all 0.3s ease-in-out;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.16);
@@ -1103,9 +1046,8 @@ hr {
 
 .footer-columns {
     display: flex;
-    /* justify-content: space-between; */
+
     flex-wrap: wrap;
-    /* align-items: flex-start; */
   }
   
   .footer-columns > div {
@@ -1132,7 +1074,7 @@ hr {
     margin: 0;
     display: flex;
     flex-direction: column;
-    gap: 4px; /* Reduced gap between list items */
+    gap: 4px; 
     
   }
 
@@ -1140,7 +1082,7 @@ hr {
   .link-group2 li {
     margin: 0;
     padding: 0;
-    line-height: 1.4; /* Tighter vertical spacing */
+    line-height: 1.4; 
     font-size: 16px;
     font-family: 'Niramit';
     text-decoration: none;
@@ -1188,10 +1130,9 @@ hr {
 
   .social-icons-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 icons per row */
+    grid-template-columns: repeat(3, 1fr); 
     list-style: none;
     padding: 0;
-    /* margin: 5px 0; */
     justify-items: center;
     margin-right: 20vw;
     margin-left: -0.8vw;
@@ -1204,8 +1145,8 @@ hr {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: rgba(255, 255, 255, 0.1); /* frosted glass effect */
-    backdrop-filter: blur(8px); /* blur background behind it */
+    background: rgba(255, 255, 255, 0.1); 
+    backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
     border: 1px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -1220,7 +1161,7 @@ hr {
   .social-icons-grid li {
     display: flex;
     margin: -2.3vh;
-    /* margin-left: -5vw; */
+
     margin-right: -1.2vw;
   }
 
@@ -1233,7 +1174,7 @@ hr {
     color: #ff7d12;
   }
   
-  /* Optional: Color hovers */
+
   .ig:hover  { background-color: #000000; }
   .yt:hover  { background-color: #000000; }
   .tw:hover  { background-color: #000000; }
