--- a/sandwich-geeks-react/src/styles/style.css
+++ b/sandwich-geeks-react/src/styles/style.css
@@ -9,6 +9,10 @@ html {
     scroll-behavior: smooth;
 }
 
+*{
+cursor: none
+}
+
 body {
     background-image: url('MacBook\ Pro\ 14_\ -\ 2.png');
     font-family: "Niramit";
