--- a/sandwich-geeks-react/src/styles/ambience.css
+++ b/sandwich-geeks-react/src/styles/ambience.css
@@ -1,6 +1,9 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Niramit:wght@300;400;500;600;700&display=swap');
 
+* {
+  cursor: none;
+}
 
 body {
     background-image: url('MacBook\ Pro\ 14_\ -\ 2.png');
