--- a/sandwich-geeks-react/src/styles/checkout.css
+++ b/sandwich-geeks-react/src/styles/checkout.css
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Niramit:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap');
 
+* {
+  cursor: none;
+}
+
 .checkout-section {
   padding: 120px 20px 40px;
   min-height: calc(100vh - 200px);
